2002-02-17  Seth Nickell  <snickell@stanford.edu>

	* default-applications.desktop.in:

	Change menu name to "Preferred Applications" which faired
	better in user testing.

2002-02-11  Seth Nickell  <snickell@stanford.edu>

	* gnome-default-applications-properties-structs.c:
	* gnome-default-applications-properties.c: (read_editor),
	(setup_peditors), (read_browser), (browser_setup_custom),
	(value_changed_cb), (dialog_response), (create_dialog):
	* gnome-default-applications-properties.glade:

	Convert to instant apply, change to using property editors
	where convenient.
	
2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* Convert to apply/close, and commit a UI string
	fix from fflewddur@dropline.net.
	
Sun Feb 10 23:39:30 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-default-applications-properties.glade: Patch from
	fflewddur <fflewddur@dropline.net> to fix some strings.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-default-applications-properties.c (initialize_default_applications):
	Use glib methods instead of deprecated libgnome ones
	(read_editor): Do not crash on NULL value
	(read_help_viewer): Ditto
	(read_browser): Ditto

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Install the icon into the pixmaps dir so
	the Panel & Nautilus will pick up on it.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (bin_PROGRAMS): Renamed binary
	gnome2-default-applications-properties
	(gnome2_default_applications_properties_SOURCES): Update
	(EXTRA_DIST): Put source file here

2002-01-04  Bradford Hovinen  <hovinen@ximian.com>

	* default-application-properties.c (edit_read): Check if tmp is
	NULL before continuing
	Use terminal/exec for terminal executable name key

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Clean up

	* default-application-properties.c (main): Call gtk_main, not
	capplet_gtk_main

	* interface.c: Don't #include capplet-widget.h
