@@ -1,3 +1,7 @@
+2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-default-applications-properties.c: s/PACKAGE/GETTEXT_PACKAGE/g
+	
 2002-02-17  Seth Nickell  <snickell@stanford.edu>
 
 	* default-applications.desktop.in:
